[package]
name = "learning"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest = { version = "0.13.1", features = ["blocking"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1.10"
# serenity = { version = "0.12.5", features = ["cache", "model"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "builder", "http", "model", "cache"] }
tokio = "1.52.2"
dotenv = "0.15.0"
rand = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.19"

serde_json = "1"